tests/unify_constructor_mismatch.test
type A = int -> int;
type B = int -> int;
let x = if true then A (fun y -> y) else B (fun y -> y);
print x 42;
####
TypeError: Incompatible types here:
type B = int -> int;
let x = if true then A (fun y -> y) else B (fun y -> y);
print x 42;
      ^~~~  
Note: The value may have type A here:
type A = int -> int;
type B = int -> int;
let x = if true then A (fun y -> y) else B (fun y -> y);
                     ^                                   
print x 42;
However, that value may also have type B here:
type A = int -> int;
type B = int -> int;
let x = if true then A (fun y -> y) else B (fun y -> y);
                                         ^               
print x 42;
Hint: To narrow down the cause of the type mismatch, consider adding an explicit type annotation here:
type A = int -> int;
type B = int -> int;
let x: _ = if true then A (fun y -> y) else B (fun y -> y);
     +++                                                    
print x 42;
